--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
+title:       Wangyuehui
+email:       503009358@qq.com
 author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+description: "Android Developer"
 baseurl:     ""
 url:         "http://pixyll.com"
 date_format: "%b %-d, %Y"
