--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       503009358@qq.com
 author:      John Otander
 description: "Android Developer"
 baseurl:     ""
-url:         "twolight.github.io"
+url:         "http://twolight.github.io"
 date_format: "%b %-d, %Y"
 
 # Google services
