--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Wangyuehui
+title:       Wangyuehui‘s Blog
 email:       503009358@qq.com
 author:      twolight
 description: "Android Developer"
